# rrr-software

./: .gitignore
rrr-api/: Cargo.toml
rrr-api/src/: lib.rs
rrr-embedded/: Cargo.toml  build.rs  partitions.csv  sdkconfig.defaults
rrr-embedded/.cargo/: config.toml
rrr-embedded/src/: led_driver.rs  main.rs  nvs.rs  ota.rs  server.rs  wifi.rs
rrr-frontend/: Cargo.toml  index.html  index.scss
rrr-frontend/src/: components.rs  main.rs
rrr-simulation/: Cargo.toml
rrr-simulation/src/: cone.rs  main.rs  simulation.rs  visual_objects.rs
