[package]
name = "rrr-embedded"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
lto = true
opt-level = "s"

[dependencies]
rrr-api = {path = "../rrr-api"}

anyhow = {version = "1", features = ["backtrace"]}
thiserror = "1"
log = "0.4"
url = "2"
esp-idf-sys = { version = "0.33", features = ["binstart"] }
esp-idf-svc = "0.46.2"
esp-idf-hal = "0.41.2"
embedded-svc = "0.25"
embedded-hal = "0.2.7"
embedded-io = "0.4.0"
heapless = "0.7.16"

ws2812-esp32-rmt-driver = "0.6.0"
serde = "1.0.185"
serde_json = "1.0.105"
max170xx = "0.1.0"
bmp280-ehal = "0.0.6"
shared-bus = { version="0.3.0", features = ["std"]}

include_dir = "0.7.3"
map_for = "0.3.0"

[build-dependencies]
embuild = { version = "0.31.2", features = ["elf"] }
anyhow = "1"
trunk-build-time = "0.17.3"
async-std = { version = "1", features = ["attributes", "tokio1"] }
tokio = "1.32.0"
flate2 = "1.0.27"